# hyperwiki

./: .gitignore  .npmignore  AGENTS.md  README.md  image-gen-design-explorations.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: launch.json
.hyperwiki/: config.json
src/: cli.js  (+16 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/agent-skills/agent-browser/: SKILL.md
src-tauri/agent-skills/hyperwiki/: .gitignore  README.md  SKILL.md
src-tauri/agent-skills/hyperwiki/references/: canonical-bootstrap-contract.md  example-minimal-bootstrap.md  example-moderate-import.md  generated-baseline-artifacts.md  intake-discovery-contract.md  lifecycle-contract.md  mdx-artifact-patterns.md  plan-page-skeletons.md  planning-contract.md  upgrade-contract.md  validation-checklist.md
src-tauri/agent-skills/parallel-dev-worktrees/: SKILL.md
src-tauri/agent-skills/portless/: SKILL.md
src-tauri/agent-skills/project-html-wiki/: .gitignore  README.md  SKILL.md
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/domain/: adopt.rs  agent_provider.rs  app_shell.rs  bugs.rs  claude_agent.rs  codex_app_server.rs  explorations.rs  feedback.rs  git.rs  import_onboarding_runtime.rs  import_planning.rs  lifecycle.rs  mcp.rs  mod.rs  plan_creation.rs  previews.rs  project_env.rs  projects.rs  reviews.rs  screenshot_reviews.rs  screenshots.rs  sessions.rs  settings.rs  terminals.rs  verification.rs  wiki.rs
(+493 files in other folders)
