[package]
name = "hyperwiki"
version = "0.1.1"
description = "Localhost Tooling for docs-driven agentic development."
authors = ["hyperwiki"]
edition = "2021"
license = "MIT"

[lib]
name = "hyperwiki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hyperwiki"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-notification = "2.3.3"
